--- a/2021.md
+++ b/2021.md
@@ -4,11 +4,6 @@
 
 **Authors:** T. Mu, Z. Ling, F. Xiang, D. Yang, X. Li, S. Tao, Z. Huang, Z. Jia, and H. Su
 
-**Publication Venue:** *arXiv preprint arXiv:2107.14483*, 2021.
+**Publication Venue:** *NeurIPS 2021 *
 
 **Description:** This paper introduces ManiSkill, a benchmark designed to evaluate generalizable manipulation skills in robotics. It provides large-scale demonstrations to facilitate the development and assessment of learning algorithms for manipulation tasks.
-
-**Citation:**
-
-```markdown
-[1] T. Mu, Z. Ling, F. Xiang, D. Yang, X. Li, S. Tao, Z. Huang, Z. Jia, and H. Su, "ManiSkill: Generalizable Manipulation Skill Benchmark with Large-Scale Demonstrations," *arXiv preprint arXiv:2107.14483*, 2021. Available: [https://arxiv.org/abs/2107.14483](https://arxiv.org/abs/2107.14483)
