--- a/2022.md
+++ b/2022.md
@@ -1,1 +1,7 @@
+# 2022
 
+## [Frame Mining: A Free Lunch for Learning Robotic Manipulation from 3D Point Clouds](https://arxiv.org/abs/2210.07442)
+
+**Authors:** Minghua Liu, Xuanlin Li, Zhan Ling, Yangyan Li, and Hao Su
+
+**Publication Venue:** *Conference on Robot Learning (CoRL)*, 2022.
