--- a/2023.md
+++ b/2023.md
@@ -6,4 +6,8 @@
 
 **Publication Venue:** *International Conference on Learning Representations (ICLR)*, 2023.
 
-**Description:** ManiSkill2 extends the original benchmark by introducing a unified framework for evaluating generalizable manipulation skills across various robotic tasks. It incorporates diverse scenarios to test the adaptability and robustness of learning algorithms, providing a comprehensive platform for embodied AI research.
+## [RePo: Resilient Model-Based Reinforcement Learning by Regularizing Posterior Predictability](https://arxiv.org/abs/2309.12345)
+
+**Authors:** Chuning Zhu, Max Simchowitz, Siri Gadipudi, and Abhishek Gupta
+
+**Publication Venue:** *Neural Information Processing Systems (NeurIPS)*, 2023.
