--- a/2024.md
+++ b/2024.md
@@ -6,4 +6,60 @@
 
 **Publication Venue:** *arXiv preprint arXiv:2410.00425*, 2024.
 
-**Description:** ManiSkill3 enhances the robotics simulation and rendering capabilities by leveraging GPU parallelization, enabling more efficient and scalable embodied AI research. It introduces advanced rendering techniques and simulation optimizations to support a broader range of manipulation tasks, facilitating higher fidelity simulations and faster computational performance.
+## [Evaluating Real-World Robot Manipulation Policies in Simulation](https://simpler-env.github.io/) *(In collaboration with Google DeepMind)*
+
+**Authors:** Xuanlin Li, Kyle Hsu, Jiayuan Gu, Karl Pertsch, Oier Mees, Homer Rich Walke, Chuyuan Fu, Ishikaa Lunawat, Isabel Sieh, Sean Kirmani, Sergey Levine, Jiajun Wu, Chelsea Finn, Hao Su, Quan Vuong, and Ted Xiao
+
+**Publication Venue:** *Conference on Robot Learning (CoRL)*, 2024.
+
+
+## [Open X-Embodiment: Robotic Learning Datasets and RT-X Models](https://robotics-transformer-x.github.io/)
+
+**Authors:** Open X-Embodiment Authors
+
+**Publication Venue:** *International Conference on Robotics and Automation (ICRA)*, 2024. *(Best Paper)*
+
+
+## [Information-driven Affordance Discovery for Efficient Robotic Manipulation](https://arxiv.org/abs/2405.03865)
+
+**Authors:** Pietro Mazzaglia, Taco Cohen, and Daniel Dijkman
+
+**Publication Venue:** *International Conference on Robotics and Automation (ICRA)*, 2024.
+
+## [Offline-Boosted Actor-Critic: Adaptively Blending Optimal Historical Behaviors in Deep Off-Policy RL](https://arxiv.org/abs/2405.18520)
+
+**Authors:** Yu Luo, Tianying Ji, Fuchun Sun, Jianwei Zhang, Huazhe Xu, and Xianyuan Zhan
+
+**Publication Venue:** *International Conference on Machine Learning (ICML)*, 2024.
+
+## [Reverse Forward Curriculum Learning for Extreme Sample and Demonstration Efficiency in Reinforcement Learning](https://arxiv.org/abs/2405.03379)
+
+**Authors:** Stone Tao, Arth Shukla, Tse-kai Chan, and Hao Su
+
+**Publication Venue:** *International Conference on Learning Representations (ICLR)*, 2024.
+
+
+## [DrS: Learning Reusable Dense Rewards for Multi-Stage Tasks](https://arxiv.org/abs/2404.16779)
+
+**Authors:** Tongzhou Mu, Minghua Liu, and Hao Su
+
+**Publication Venue:** *International Conference on Learning Representations (ICLR)*, 2024.
+
+## [TDMPC2](https://arxiv.org/abs/2310.16828)
+
+**Authors:** Nicklas Hansen, Hao Su, and Xiaolong Wang
+
+**Publication Venue:** *International Conference on Learning Representations (ICLR)*, 2024. *(Spotlight)*
+
+## [CyberDemo: Augmenting Simulated Human Demonstration for Real-World Dexterous Manipulation](https://arxiv.org/abs/2402.14795)
+
+**Authors:** Jun Wang, Yuzhe Qin, Kaiming Kuang, Yigit Korkmaz, Akhilan Gurumoorthy, Hao Su, and Xiaolong Wang
+
+**Publication Venue:** *Conference on Computer Vision and Pattern Recognition (CVPR)*, 2024.
+
+
+## [Chain-of-Thought Predictive Control](https://arxiv.org/abs/2304.00776)
+
+**Authors:** Zhiwei Jia, Vineet Thumuluri, Fangchen Liu, Linghao Chen, Zhiao Huang, and Hao Su
+
+**Publication Venue:** *International Conference on Machine Learning (ICML)*, 2024.
