--- a/2024.md
+++ b/2024.md
@@ -1,5 +1,12 @@
 # 2024
 
+## [ManiSkill-HAB: A Benchmark for Low-Level Manipulation in Home Rearrangement Tasks](https://arxiv.org/abs/2412.13211)
+
+**Authors:** Arth Shukla, Stone Tao, Hao Su
+
+**Publication Venue:** *arXiv preprint arXiv:2412.13211*, 2024.
+
+
 ## [ManiSkill3: GPU Parallelized Robotics Simulation and Rendering for Generalizable Embodied AI](https://arxiv.org/abs/2410.00425)
 
 **Authors:** S. Tao, F. Xiang, A. Shukla, Y. Qin, X. Hinrichsen, X. Yuan, C. Bao, X. Lin, Y. Liu, T.-k. Chan, Y. Gao, X. Li, T. Mu, N. Xiao, A. Gurha, Z. Huang, R. Calandra, R. Chen, S. Luo, and H. Su
