--- a/2024.md
+++ b/2024.md
@@ -4,7 +4,7 @@
 
 **Authors:** Arth Shukla, Stone Tao, Hao Su
 
-**Publication Venue:** *arXiv preprint arXiv:2412.13211*, 2024.
+**Publication Venue:** *International Conference on Learning Representations (ICLR)*, 2025.
 
 
 ## [ManiSkill3: GPU Parallelized Robotics Simulation and Rendering for Generalizable Embodied AI](https://arxiv.org/abs/2410.00425)
